--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .tab_wrapper {
   padding: 10px;
+  height: 100%;
 }
 
 .render_image_wrap {
   width: 200px;
-  margin: 0 5px;
+  margin: 5px;
 }
 
 .render_image_view {
@@ -16,4 +17,76 @@
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+/* .tab_wrapper .nav-tabs {
+  height: calc(100% - 50px);
+} */
+
+.tab-content {
+  height: calc(100% - 58px);
+  position: relative;
+}
+
+.tab_wrapper .dropbox {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+}
+
+.react-autosuggest__container {
+  position: relative;
+}
+
+.react-autosuggest__input {
+  width: 240px;
+  padding: 10px 20px;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+}
+
+.react-autosuggest__input--focused {
+  outline: none;
+}
+
+.react-autosuggest__input--open {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.react-autosuggest__suggestions-container {
+  display: none;
+}
+
+.react-autosuggest__suggestions-container--open {
+  display: block;
+  position: absolute;
+  top: 51px;
+  width: 240px;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  z-index: 2;
+}
+
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+.react-autosuggest__suggestion--highlighted {
+  background-color: #ddd;
 }
