--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,29 @@
 .render_image_wrap {
   width: 200px;
   margin: 5px;
+  position: relative;
+}
+
+.render_image_wrap:hover .hover_image_content {
+  opacity: 1;
+  visibility: visible;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.hover_image_content {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  color: #fff;
+}
+
+.hover_image_content a {
+  color: #fff;
+  text-decoration: none;
 }
 
 .render_image_view {
@@ -17,11 +40,12 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
 }
-
-/* .tab_wrapper .nav-tabs {
-  height: calc(100% - 50px);
-} */
 
 .tab-content {
   height: calc(100% - 58px);
@@ -32,6 +56,11 @@
   height: 100%;
   position: absolute;
   width: 100%;
+  border-color: #333;
+}
+
+.tab_wrapper .dropbox:hover {
+  cursor: move;
 }
 
 .react-autosuggest__container {
@@ -89,4 +118,55 @@
 
 .react-autosuggest__suggestion--highlighted {
   background-color: #ddd;
+}
+
+.bg_cover {
+  background-size: cover !important;
+  position: relative;
+}
+
+.bg_cover:hover .hover_tags {
+  visibility: visible;
+  opacity: 1;
+}
+
+.hover_tags {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  visibility: hidden;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.scroll_view {
+  max-height: calc(100vh - 200px);
+  overflow-y: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.grid_card_view:hover .bg_cover {
+  cursor: pointer;
+  position: relative;
+}
+
+.toastContainer .toast.error {
+  display: block;
+  color: #fff;
+}
+
+.tags_view {
+  font-size: 11px !important;
+}
+
+.tags_list_suggestion {
+  font-size: 11px;
 }
